After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 792856 - off64_t isn't a part of C standard
off64_t isn't a part of C standard
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: docs
unspecified
Other Linux
: Normal minor
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2018-01-24 09:03 UTC by Mohammed Sadiq
Modified: 2018-02-02 08:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
docs: Clarify the definition of goffset (1.15 KB, patch)
2018-01-24 15:52 UTC, Philip Withnall
committed Details | Review

Description Mohammed Sadiq 2018-01-24 09:03:45 UTC
In the documentation of goffset, off64_t is said to be a part of C99, which really is not. off_t is a part of POSIX standard[0]. I couldn't find any official documentation that states off64_t. In any case, it is wrong to say that it's a standard of C99.


[0] http://pubs.opengroup.org/onlinepubs/009696699/basedefs/sys/types.h.html
Comment 1 Philip Withnall 2018-01-24 15:52:28 UTC
Created attachment 367383 [details] [review]
docs: Clarify the definition of goffset

off64_t doesn’t exist in any standard (definitely not C99), and so
goffset is actually closer to off_t in 64-bit mode.

However, goffset is always defined as gint64, so make that clear.

Signed-off-by: Philip Withnall <withnall@endlessm.com>
Comment 2 Matthias Clasen 2018-02-02 08:24:25 UTC
Review of attachment 367383 [details] [review]:

sure
Comment 3 Philip Withnall 2018-02-02 08:30:09 UTC
Merged to master, thanks for the review!

Attachment 367383 [details] pushed as 3859293 - docs: Clarify the definition of goffset